--- a/section_7.js/index.html
+++ b/section_7.js/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <title>JS APP</title>
     </head>
 
     <body>
         
        <h1>JavaScript App</h1>
-       <p>This is the basic application using JS</p>
-       <p>Second paragraph</p>
+       <p class="p-note">This is the basic application using JS</p>
+       <p class="p-note">Second paragraph</p>
+       <button id="create-note">Create Note</button><br><br><br>
+       <button id="remove-all">Remove-Note</button>
        <script src="validation.js"></script>
     </body>
 </html>
