--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -10,11 +10,12 @@
     
     <h1>Todo-app</h1>
 
-    <p>Buy the Food</p>
+    <!-- <p>Buy the Food</p>
     <p>Clean car</p>
     <p>Go to the Market</p>
     <p>Exercise</p>
-    <p>Upload pictures</p>
+    <p>Upload pictures</p> -->
+    <button id="add-todo">Click me</button>
 
     <script src="todo.js"></script>
 </body>
